--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "classnames": "^2.2.5",
-    "react-portal": "^3.1.0",
+    "react-portal": "^4.1.2",
     "viewport-size": "^0.0.1"
   },
   "peerDependencies": {
-    "react": "15.x"
+    "react": "^15.5.4 || ^16.0.0",
+    "react-dom": "^15.5.4 || ^16.0.0"
   },
   "devDependencies": {
     "nwb": "0.15.x",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
   },
   "author": "",
   "homepage": "",
